--- a/src/style.css
+++ b/src/style.css
@@ -1,5 +1,37 @@
 * {
-  box-sizing: border-box;
-  padding: 0;
   margin: 0;
+  padding: 0;
+  box-sizing: border-box;
 }
+
+body {
+  min-height: 100vh;
+}
+
+header {
+  height: 10vh;
+  margin: 40px 0;
+}
+
+a {
+  text-decoration: none;
+}
+
+.nav-ul {
+  display: flex;
+  width: 80%;
+  margin: 10px auto;
+}
+
+.nav-ul li {
+  list-style: none;
+  margin-right: 65px;
+  padding: 16px;
+  margin-top: 5px;
+}
+
+.nav-ul li a {
+  color: #333;
+  font-size: 1.2rem;
+}
+
