--- a/src/style.css
+++ b/src/style.css
@@ -1,5 +1,116 @@
-* {
+*,
+*::after,
+*::before {
   box-sizing: border-box;
+}
+
+body {
+  margin: 0;
+  font-family: "Nunito", sans-serif;
+}
+
+header {
+  display: flex;
+  width: 100%;
+  align-items: center;
+  justify-content: space-between;
+  height: 48px;
+  background-color: #333;
+}
+
+.nav-container {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  list-style: none;
+  padding: 0;
+  margin-right: 20px;
+}
+
+.link {
+  color: #fff;
+  margin: 8px;
+  font-size: 30px;
+  cursor: pointer;
+}
+
+.logo {
+  color: #fff;
+  margin-left: 15px;
+}
+
+footer {
+  display: flex;
+  width: 100%;
+  align-items: center;
+  justify-content: center;
+  height: 48px;
+  background-color: #333;
+}
+
+.footer-text {
+  color: #fff;
+  font-weight: bold;
+}
+
+button {
+  cursor: pointer;
+  transition-duration: 0.4s;
+  width: 100px;
+  padding: 10px;
+  border-radius: 8px;
+}
+
+button:hover {
+  background-color: #4caf50;
+  color: white;
+}
+
+.movies-section {
+  display: grid;
+  grid-template-columns: auto auto auto auto auto;
+  align-items: center;
+  gap: 22px;
+  margin: 30px;
+}
+
+.grid-items {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  background-color: #008;
+  border-radius: 12px;
+  padding: 20px;
+}
+
+.image-card {
+  display: flex;
   padding: 0;
   margin: 0;
+}
+
+.image-card img {
+  width: 100%;
+  height: 35vh;
+}
+
+.subtitles {
+  display: flex;
+  align-items: baseline;
+  gap: 12px;
+}
+
+.span-icon {
+  background-color: orange;
+  color: #fff;
+  font-size: 14px;
+  font-weight: 600;
+  border-radius: 10px;
+  padding: 2px;
+}
+
+.like {
+  font-size: 23px;
+  color: red;
 }
